--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 	<h1>My First Website Test!</h1>
-	<p>Description of a website could go here.</p>
+	<p>I did it! Now I can type whatever I want into this and it will show up on my website!</p>
 
 </body>
 </html>
