--- a/index.html
+++ b/index.html
@@ -1,8 +1,69 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+</style>
+</head>
 <body>
-	<h1>My First Website Test!</h1>
-	<p>hello everyone</p>
+
+<div class="container">
+
+<header>
+   <h1>Recker Aerial Images, LLC</h1>
+</header>
+  
+<nav>
+  <ul>
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+  </ul>
+</nav>
+
+<article>
+  <h1>Example</h1>
+  <p>Example text.</p>
+  <p>Example text 2.</p>
+</article>
+
+<footer>reckeraerial@gmail.com</footer>
+
+</div>
 
 </body>
 </html>
