--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@ div.container {
     border: 1px solid gray;
 }
 
+body{
+    background-color: lightblue;
+    }
+
+h1 {
+    color:red;
+    font-family: "Courier New";
+    font-size: 20px;
+    }
+    
 header, footer {
     padding: 1em;
     color: white;
