--- a/index.html
+++ b/index.html
@@ -2,42 +2,52 @@
 <html>
 <head>
 <style>
-div.container {
+
+div.container
+{
     width: 100%;
     border: 1px solid gray;
 }
 
-body{
+body
+{
+	/* changes the background color --> */
     background-color: lightblue;
-    }
+}
 
-h1 {
-    color:red;
+h1 
+{
+	/* adjusts the "h1" font, font size and color */
+    color: darkgreen;
     font-family: "Courier New";
     font-size: 20px;
-    }
+}
     
-header, footer {
+header, footer
+{
     padding: 1em;
     color: white;
-    background-color: black;
+    background-color: grey;
     clear: left;
     text-align: center;
 }
 
-nav {
+nav
+{
     float: left;
     max-width: 160px;
     margin: 0;
     padding: 1em;
 }
 
-nav ul {
+nav ul
+{
     list-style-type: none;
     padding: 0;
 }
    
-nav ul a {
+nav ul a
+{
     text-decoration: none;
 }
 
@@ -66,9 +76,9 @@ article {
 </nav>
 
 <article>
-  <h1>Example</h1>
-  <p>Example text.</p>
-  <p>Example text 2.</p>
+  <h1>Welcome!</h1>
+  <p>My name is Grant Recker. I am 17 years old.</p>
+  <p>I have recently discovered my passion for flying drones and taking video and pictures from the sky.</p>
 </article>
 
 <footer>reckeraerial@gmail.com</footer>
