--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@ div.container
 body
 {
 	/* changes the background color --> */
-    background-color: lightblue;
+    background-color: lightgrey;
 }
 
 h1 
 {
 	/* adjusts the "h1" font, font size and color */
-    color: darkgreen;
+    color: green;
     font-family: "Courier New";
-    font-size: 20px;
+    font-size: 40px;
 }
     
 header, footer
@@ -66,7 +66,8 @@ article {
 <header>
    <h1>Recker Aerial Images, LLC</h1>
 </header>
-  
+ 
+ <!-- uses the links to other pages, change # to page ref ?
 <nav>
   <ul>
     <li><a href="#">1</a></li>
@@ -74,6 +75,7 @@ article {
     <li><a href="#">3</a></li>
   </ul>
 </nav>
+-->
 
 <article>
   <h1>Welcome!</h1>
