--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ div.container
 body
 {
 	/* changes the background color --> */
-    background-color: lightgrey;
+    background-color: white;
 }
 
 h1 
@@ -27,7 +27,7 @@ header, footer
 {
     padding: 1em;
     color: white;
-    background-color: grey;
+    background-color: lightgrey;
     clear: left;
     text-align: center;
 }
