--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ article {
   <h1>Welcome!</h1>
   <p>My name is Grant Recker. I am 17 years old.</p>
   <p>I have recently discovered my passion for flying drones and taking video and pictures from the sky.</p>
+  
+<img src="reckeraerial/Illuminati.png" style="width:200;height:200">
+       
 </article>
 
 <footer>reckeraerial@gmail.com</footer>
