--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@ article {
   <h1>Welcome!</h1>
   <p>My name is Grant Recker. I am 17 years old.</p>
   <p>I have recently discovered my passion for flying drones and taking video and pictures from the sky.</p>
+	<p>Goodbye world</p>
   
 <img src="reckeraerial/Illuminati.png" style="width:200;height:200">
+<p><a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a></p>
+<p><a href="https://soundcloud.com/itsyunggah/yung-gah-lil-gumu-the-yung-thug-cravin-craisins-feat-yung-guini/"> Sponsored by Yung Gah</a><p>
        
 </article>
 
