--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,8 @@
 <html>
   
 <h1>Second Page Test</h1>
-  <h2>Previous Successful Operations</h2>
+<h2>Previous Successful Operations</h2>
+<img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:304px;height:228px;">
   
 <!--
 <p><a href="https://soundcloud.com/itsyunggah/yung-gah-lil-gumu-the-yung-thug-cravin-craisins-feat-yung-guini/"> Sponsored by Yung Gah</a><p>
