put page3 link on home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ h1
 header, footer
 {
     padding: 1em;
-    color: white;
+
+	color: white;
     background-color: lightgrey;
     clear: left;
     text-align: center;
@@ -38,7 +39,7 @@ nav
     max-width: 160px;
     margin: 0;
     padding: 1em;
-}
+3}
 
 nav ul
 {
@@ -76,6 +77,21 @@ article {
   </ul>
 </nav>
 
+<nav>
+
+  <ul>
+
+    <li><a href="page3.html">Third Page</a></li>
+
+    <!-- <li><a href="#">2</a></li>
+
+    <li><a href="#">3</a></li> -->
+
+  </ul>
+
+</nav>	
+	
+	
 <article>
   <h1>Welcome!</h1>
   <p>My name is Grant Recker. I am 17 years old.</p>
