--- a/index.html
+++ b/index.html
@@ -71,25 +71,13 @@ article {
 <!-- links to other pages-->
 <nav>
   <ul>
-    <li><a href="page2.html">Second Page Link</a></li>
+    <li><a href="page2.html">Previous Work</a></li>
+    <li><a href="page3.html">Contact Information</a></li>
+	  
     <!-- <li><a href="#">2</a></li>
     <li><a href="#">3</a></li> -->
   </ul>
 </nav>
-
-<nav>
-
-  <ul>
-
-    <li><a href="page3.html">Third Page</a></li>
-
-    <!-- <li><a href="#">2</a></li>
-
-    <li><a href="#">3</a></li> -->
-
-  </ul>
-
-</nav>	
 	
 	
 <article>
