--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,18 @@
 <html>
 <body>
 
-
+<form action="/test.php">
+  <fieldset>
+    <legend>Personal information:</legend>
+    First name:<br>
+    <input type="text" name="firstname">
+    <br>
+    Last name:<br>
+    <input type="text" name="lastname">
+    <br><br>
+    <input type="submit" value="Submit">
+  </fieldset>
+</form>
 
 
 
