editing variable names

--- a/page3.html
+++ b/page3.html
@@ -8,9 +8,9 @@
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
-<input type="text" name="mail"><br>
+<input type="text" name="email"><br>
 Comment:<br>
-<input type="text" name="comment" size="50"><br><br>
+<input type="text" name="message" size="50"><br><br>
 <input type="submit" value="Send">
 <input type="reset" value="Reset">
 </form>
