--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
 
 <h2>Send e-mail to reckeraerial@gmail.com:</h2>
 
-<form action="mailto:reckeraerial@gmail.com" method="post" enctype="text/plain">
+<form action="/test.php" method="post" enctype="text/plain">
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
