--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ article {
 <nav>
   <ul>
     <li><a href="page2.html">Previous Work</a></li>
-    <li><a href="page3.html">Contact Information</a></li>
+    <li><a href="page3.php">Contact Information</a></li>
     <li><a href="page4.html">About Us</a></li>
 	  
     <!-- <li><a href="#">2</a></li>
