--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
+<head><style>
 
 div.container
 {
@@ -11,8 +10,7 @@ div.container
 
 body
 {
-	/* changes the background color --> */
-    background-color: white;
+	/* changes the background color --> */    background-color: white;
 }
 
 h1 
@@ -22,8 +20,7 @@ h1
     font-family: "Courier New";
     font-size: 40px;
 }
-    
-header, footer
+    header, footer
 {
     padding: 1em;
 
@@ -72,7 +69,7 @@ article {
 <nav>
   <ul>
     <li><a href="page2.html">Previous Work</a></li>
-    <li><a href="page3.php">Contact Information</a></li>
+    <li><a href="page3.html">Contact Information</a></li>
     <li><a href="page4.html">About Us</a></li>
 	  
     <!-- <li><a href="#">2</a></li>
