adding template to page2

--- a/page2.html
+++ b/page2.html
@@ -1,13 +1,149 @@
 <!DOCTYPE HTML>
 <html>
-  
+<head><style>  
+  div.container
+
+{
+
+    width: 100%;
+
+    border: 1px solid gray;
+
+}
+
+
+
+body
+
+{
+
+	/* changes the background color --> */    background-color: white;
+
+}
+
+
+
+h1 
+
+{
+
+	/* adjusts the "h1" font, font size and color */
+
+    color: green;
+
+    font-family: "Courier New";
+
+    font-size: 40px;
+
+}
+
+    header, footer
+
+{
+
+    padding: 1em;
+
+
+
+	color: white;
+
+    background-color: lightgrey;
+
+    clear: left;
+
+    text-align: center;
+
+}
+
+
+
+nav
+
+{
+
+    float: left;
+
+    max-width: 160px;
+
+    margin: 0;
+
+    padding: 1em;
+
+3}
+
+
+
+nav ul
+
+{
+
+    list-style-type: none;
+
+    padding: 0;
+
+}
+
+   
+
+nav ul a
+
+{
+
+    text-decoration: none;
+
+}
+
+
+
+article {
+
+    margin-left: 170px;
+
+    border-left: 1px solid gray;
+
+    padding: 1em;
+
+    overflow: hidden;
+
+}
+
+</style>
+
+</head>
+
+<body>
+
+
+
+<div class="container">
+
+
+
+<header>
+
+   <h1>Recker Aerial Images, LLC</h1>
+
+</header>
+
+
+
+<!-- links to other pages-->
+
+<nav>
+
+  <ul>
+
+    <li><a href="page2.html">Previous Work</a></li>
+
+    <li><a href="page3.html">Contact Information</a></li>
+
+    <li><a href="page4.html">About Us</a></li>
+    
+  <article>
 <h1>Second Page Test</h1>
-<h2>Previous Successful Operations</h2>
+<p>Previous Successful Operations</p>
 <img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:1216px;height:912px;">
   
-<!--
-<p><a href="https://soundcloud.com/itsyunggah/yung-gah-lil-gumu-the-yung-thug-cravin-craisins-feat-yung-guini/"> Sponsored by Yung Gah</a><p>
--->
   
 <!--
 <head>
