--- a/page2.html
+++ b/page2.html
@@ -2,64 +2,31 @@
 <html>
 <head><style>  
   div.container
-
 {
-
     width: 100%;
-
     border: 1px solid gray;
-
 }
-
-
-
-body
-
+dbody
 {
-
 	/* changes the background color --> */    background-color: white;
-
 }
-
-
-
 h1 
-
 {
-
 	/* adjusts the "h1" font, font size and color */
-
     color: green;
-
     font-family: "Courier New";
-
     font-size: 40px;
-
-}
-
-    header, footer
-
+}    header, footer
 {
-
     padding: 1em;
-
-
-
-	color: white;
-
+    color: white;
     background-color: lightgrey;
-
     clear: left;
-
     text-align: center;
-
 }
-
-
-
 nav
 
-{
+f{
 
     float: left;
 
@@ -69,8 +36,7 @@ nav
 
     padding: 1em;
 
-3}
-
+d3}
 
 nav ul
 
@@ -80,8 +46,8 @@ nav ul
 
     padding: 0;
 }
-
-   
+n
+n   
 
 nav ul a
 
@@ -90,7 +56,7 @@ nav ul a
     text-decoration: none;
 
 }
-
+n
 
 article {
 
@@ -129,7 +95,7 @@ article {
 <nav>
 
   <ul>
-
+    <li><a href="index.html">Home</a></li>
     <li><a href="page2.html">Previous Work</a></li>
 
     <li><a href="page3.html">Contact Information</a></li>
