--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     width: 100%;
     border: 1px solid gray;
 }
-dbody
+body
 {
 	/* changes the background color --> */    background-color: white;
 }
@@ -26,7 +26,7 @@ h1
 }
 nav
 
-f{
+{
 
     float: left;
 
@@ -36,9 +36,9 @@ f{
 
     padding: 1em;
 
-d3}
+3}
 
-nav ul
+nav ul a
 
 {
 
@@ -53,10 +53,10 @@ nav ul a
 
 {
 
-    text-decoration: none;
+   text-decoration: none;
 
 }
-n
+
 
 article {
 
@@ -97,21 +97,18 @@ article {
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="page2.html">Previous Work</a></li>
-
     <li><a href="page3.html">Contact Information</a></li>
-
     <li><a href="page4.html">About Us</a></li>
     
   <article>
 <h1>Second Page Test</h1>
 <p>Previous Successful Operations</p>
 <img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:608px;height:456px;">
-  
+  </article>
   
 <!--
 <head>
 <style>
 </style>
 -->
-  
-</html>
+	  <\html>
