--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ article {
 <!-- links to other pages-->
 <nav>
   <ul>
+    <li><a href="index.html">Home</a></li>  
     <li><a href="page2.html">Previous Work</a></li>
     <li><a href="page3.html">Contact Information</a></li>
     <li><a href="page4.html">About Us</a></li>
