tried to fix page2

--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,6 @@ h1
     text-align: center;
 }
 nav
-
 {
 
     float: left;
@@ -38,19 +37,15 @@ nav
 
 3}
 
-nav ul a
-
+nav ul 
 {
 
     list-style-type: none;
 
     padding: 0;
 }
-n
-n   
 
 nav ul a
-
 {
 
    text-decoration: none;
@@ -59,53 +54,33 @@ nav ul a
 
 
 article {
-
     margin-left: 170px;
-
     border-left: 1px solid gray;
-
     padding: 1em;
-
     overflow: hidden;
-
 }
 
 </style>
-
 </head>
-
 <body>
-
-
-
 <div class="container">
-
-
-
 <header>
-
    <h1>Recker Aerial Images, LLC</h1>
-
 </header>
-
-
-
 <!-- links to other pages-->
-
 <nav>
-
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="page2.html">Previous Work</a></li>
     <li><a href="page3.html">Contact Information</a></li>
-    <li><a href="page4.html">About Us</a></li>
-    
+    <li><a href="page4.html">About Us</a></li> 
   <article>
 <h1>Second Page Test</h1>
 <p>Previous Successful Operations</p>
 <img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:608px;height:456px;">
   </article>
-  
+	  <footer>reckeraerial@gmail.com</footer>
+
 <!--
 <head>
 <style>
