--- a/page2.html
+++ b/page2.html
@@ -1,57 +1,53 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head><style>  
-  div.container
+<head><style>
+
+div.container
 {
     width: 100%;
     border: 1px solid gray;
 }
+
 body
 {
 	/* changes the background color --> */    background-color: white;
 }
+
 h1 
 {
 	/* adjusts the "h1" font, font size and color */
     color: green;
     font-family: "Courier New";
     font-size: 40px;
-}    header, footer
+}
+    header, footer
 {
     padding: 1em;
-    color: white;
+
+	color: white;
     background-color: lightgrey;
     clear: left;
     text-align: center;
 }
+
 nav
 {
-
     float: left;
-
     max-width: 160px;
-
     margin: 0;
-
     padding: 1em;
-
 3}
 
-nav ul 
+nav ul
 {
-
     list-style-type: none;
-
     padding: 0;
 }
-
+   
 nav ul a
 {
-
-   text-decoration: none;
-
+    text-decoration: none;
 }
-
 
 article {
     margin-left: 170px;
@@ -59,31 +55,41 @@ article {
     padding: 1em;
     overflow: hidden;
 }
-
 </style>
 </head>
 <body>
+
 <div class="container">
+
 <header>
    <h1>Recker Aerial Images, LLC</h1>
 </header>
+
 <!-- links to other pages-->
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>  
     <li><a href="page2.html">Previous Work</a></li>
     <li><a href="page3.html">Contact Information</a></li>
-    <li><a href="page4.html">About Us</a></li> 
-  <article>
-<h1>Second Page Test</h1>
+    <li><a href="page4.html">About Us</a></li>
+	  
+    <!-- <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li> -->
+  </ul>
+</nav>
+	
+	
+<article>
+  <h1>Second Page Test</h1>
 <p>Previous Successful Operations</p>
 <img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:608px;height:456px;">
-  </article>
-	  <footer>reckeraerial@gmail.com</footer>
+       
+</article>
 
-<!--
-<head>
-<style>
-</style>
--->
+<footer>reckeraerial@gmail.com</footer>
+
+</div>
+
+</body>
+</html>
 	  
