--- a/about.html
+++ b/about.html
@@ -138,13 +138,11 @@ article {
 
   <ul>
 
-    <li><a href="index.html">Home</a></li>  
-
-    <li><a href="page2.html">Previous Work</a></li>
-
-    <li><a href="page3.html">Contact Information</a></li>
-
-    <li><a href="page4.html">About Us</a></li>
+     <li><a href="home.html">Home</a></li>  
+    <li><a href="works.html">Previous Work</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="services.html">Services</a></li>
 
 	  
 
