--- a/works.html
+++ b/works.html
@@ -68,7 +68,7 @@ article {
 <!-- links to other pages-->
 <nav>
   <ul>
-     <li><a href="home.html">Home</a></li>  
+     <li><a href="index.html">Home</a></li>  
     <li><a href="works.html">Previous Work</a></li>
     <li><a href="contact.html">Contact Us</a></li>
     <li><a href="about.html">About Us</a></li>
