--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@ article {
 
   <ul>
 
-     <li><a href="home.html">Home</a></li>  
+     <li><a href="index.html">Home</a></li>  
     <li><a href="works.html">Previous Work</a></li>
     <li><a href="contact.html">Contact Us</a></li>
     <li><a href="about.html">About Us</a></li>
