--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@ article {
 	
 <article>
   <h1>Services</h1>
-	<p>Our services include horn playing, woahgramming and getting kicked out of class</p>
+	<p>(Text here.)</p>
        
 </article>
 
