--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@ article {
 	<p></p>
    <h2>Send e-mail to reckeraerial@gmail.com:</h2>
 
-<form action="" method="post" enctype="text/plain">
+<form action="test.php" method="post" enctype="text/plain">
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
