--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@ div.container
 body
 
 {
+	background-image: url("illuminati.gif");
 
 	/* changes the background color --> */    background-color: white;
 
