--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@ div.container
 body
 
 {
-	background-image: url("illuminati.gif");
+	background-image: url("illuminati.png");
 
-	/* changes the background color --> */    background-color: white;
+	/* changes the background color --> */    /*background-color: white;*/
 
 }
 
