--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ div.container
 body
 
 {
-	background-image: url("illuminati.png");
+	background-image: url("neighborhood.png");
 
 	/* changes the background color --> */    /*background-color: white;*/
 
