--- a/works.html
+++ b/works.html
@@ -81,8 +81,8 @@ article {
 	
 	
 <article>
-  <h1>Second Page Test</h1>
-<p>Previous Successful Operations</p>
+  <h1>Gallery</h1>
+<p></p>
 <img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:304px;height:228px;">
        
 </article>
