--- a/about.html
+++ b/about.html
@@ -80,7 +80,6 @@ nav
 
 
 nav ul
-
 {
 
     list-style-type: none;
@@ -129,7 +128,7 @@ article {
 
    <h1>Recker Aerial Images, LLC</h1>
 
-</header>
+ </header>
 
 
 
@@ -162,7 +161,7 @@ article {
 <article>
 
   <h1>About Me</h1>
-
+	<h1> My nama Geoff</h1>
 
        
 
