--- a/works.html
+++ b/works.html
@@ -55,9 +55,6 @@ article {
     padding: 1em;
     overflow: hidden;
 }
-</style>
-</head>
-<body>
 
 <div class="container">
 
@@ -83,7 +80,53 @@ article {
 <article>
   <h1>Gallery</h1>
 <p></p>
-<img src="neighborhood.jpg" alt="NEIGHBORHOOD" style="width:304px;height:228px;">
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 440px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+<div class="gallery">
+  <a target="_blank" href="">
+    <img src="" alt="" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="reckeraerial/sewickley from the air.jpg ">
+    <img src="reckeraerial/sewickley from the air.jpg " alt="Sewickley From the Air" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="neighborhood.jpg">
+    <img src="neighborhood.jpg" alt="Neighborhood" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="illuminati.png">
+    <img src="illuminati.png" alt="Loomy" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
        
 </article>
 
