commented out gah

--- a/works.html
+++ b/works.html
@@ -29,7 +29,6 @@ h1
     clear: left;
     text-align: center;
 }
-
 nav
 {
     float: left;
@@ -71,8 +70,8 @@ article {
     <li><a href="about.html">About Us</a></li>
     <li><a href="services.html">Services</a></li>
 	  
-    <!-- <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li> -->
+   /* <!-- <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li> -->*/
   </ul>
 </nav>
 	
