--- a/works.html
+++ b/works.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><style>
-
+<body>
+<div>
 div.container
 {
     width: 100%;
@@ -48,8 +49,7 @@ nav ul a
     text-decoration: none;
 }
 
-article {
-    margin-left: 170px;
+article {    margin-left: 170px;
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
@@ -86,46 +86,7 @@ div.gallery {
     width: 440px;
 }
 
-div.gallery:hover {
-    border: 1px solid #777;
-}
 
-div.gallery img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-<div class="gallery">
-  <a target="_blank" href="">
-    <img src="" alt="" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="reckeraerial/sewickley from the air.jpg ">
-    <img src="reckeraerial/sewickley from the air.jpg " alt="Sewickley From the Air" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="neighborhood.jpg">
-    <img src="neighborhood.jpg" alt="Neighborhood" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="illuminati.png">
-    <img src="illuminati.png" alt="Loomy" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
        
 </article>
 
