--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@ article {
 <article>
 
   <h1>About Me</h1>
-	<h1> My nama Geoff</h1>
+	<h1> Recker aerial was founded by Grant Recker in early 2017. </h1>
 
        
 
