--- a/about.html
+++ b/about.html
@@ -127,6 +127,7 @@ article {
 <header>
 
    <h1>Recker Aerial Images, LLC</h1>
+	<h3> We catch the aerial view so you don't have to.</h3>
 
  </header>
 
