--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ article {
 
 <header>
    <h1>Recker Aerial Images, LLC</h1>
+	<h2> We catch the aerial so you don't have to.</h2>
 </header>
 
 <!-- links to other pages-->
