--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@ article {
 	
 	
 <article>
-  <h1>Contact Us!</h1>
+  <h1>Contact Us! (Under Construction)</h1>
 	<p></p>
    <h2>Send e-mail to reckeraerial@gmail.com:</h2>
 
