--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ article {
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 
-* {box-sizing:border-box}
+{box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
@@ -122,7 +122,7 @@ article {
     display: none;
 }
 
-/* Next & previous buttons */
+/* Next a previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
