--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@ article {
 </style>
 </head>
 <body>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ReckerAerial -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9396871885862396"
+     data-ad-slot="2254909396"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div class="container">
 
 <header>
