--- a/works.html
+++ b/works.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><style>
-<body>
+
 <div>
 div.container
 {
@@ -53,7 +53,8 @@ article {    margin-left: 170px;
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
-}
+}</style>
+<body>
 <div class="container">
 
 <header>
