--- a/works.html
+++ b/works.html
@@ -53,7 +53,14 @@ article {    margin-left: 170px;
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
-}</style>
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 440px;
+}
+</style>
 <body>
 <div class="container">
 
@@ -79,13 +86,6 @@ article {    margin-left: 170px;
 <article>
   <h1>Gallery</h1>
 <p></p>
-div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 440px;
-}
-
 
        
 </article>
@@ -96,4 +96,5 @@ div.gallery {
 
 </body>
 </html>
+	  
 	  
