--- a/works.html
+++ b/works.html
@@ -85,7 +85,17 @@ div.gallery {
 	
 <article>
   <h1>Gallery</h1>
-<p></p>
+<p>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ReckerAerial -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9396871885862396"
+     data-ad-slot="2254909396"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
        
 </article>
