--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,8 @@ article {
 	<p></p>
    <h2>Send e-mail to reckeraerial@gmail.com:</h2>
 	
-!--
 
-<form action="test.php" method="post" enctype="text/plain">
+<form>
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
@@ -109,7 +108,7 @@ Comment:<br>
 <input type="submit" value="Send">
 <input type="reset" value="Reset">
 </form>    
---!
+
 </article>
 
 <footer>reckeraerial@gmail.com</footer>
