--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@ div.container
     width: 100%;
 
     border: 1px solid gray;
-
+    border-style: solid;
+    border-width: thick;
+    border-color: darkgreen;
 }
 
 
@@ -21,7 +23,7 @@ div.container
 body
 
 {
-	background-image: url("neighborhood.jpg");
+	/*background-image: url("neighborhood.jpg");
 
 	/* changes the background color --> */    /*background-color: white;*/
 
