--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ div.container
 {
     width: 100%;
     border: 1px solid gray;
+	border-style:solid;
+	border-width:thick;
+	border-color:darkgreen;
 }
 
 body
