--- a/works.html
+++ b/works.html
@@ -43,7 +43,10 @@ nav ul
     list-style-type: none;
     padding: 0;
 }
-   
+footer{
+	font-family:impact;
+	font-color:dark-green;
+	}
 nav ul a
 {
     text-decoration: none;
