--- a/works.html
+++ b/works.html
@@ -44,8 +44,8 @@ nav ul
     padding: 0;
 }
 footer{
-	font-family:impact;
-	font-color:dark-green;
+	font-family:requiem;
+	font-color:darkgreen;
 	}
 nav ul a
 {
