--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ article {
 </head>
 <body>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ReckerAerial -->
+<!-- index -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-9396871885862396"
-     data-ad-slot="2254909396"
+     data-ad-client="ca-pub-5496345095180076"
+     data-ad-slot="5497872605"
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
