--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,13 @@ article {
 }
 </style>
 </head>
-<body>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- ReckerAerial -->
 <ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="pub-5496345095180076"
-     data-ad-slot="1159173314"
-     data-ad-format="auto"></ins>
+    style="display:block"
+    data-ad-client="ca-pub-9396871885862396"
+    data-ad-slot="2254909396"
+    data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
