--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ article {
 </style>
 </head>
 <body>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- index -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -72,7 +72,7 @@ article {
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <div class="container">
-
+	</center>
 <header>
    <h1>Recker Aerial Images, LLC</h1>
 	<h2> We catch the aerial so you don't have to.</h2>
