--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ h1
     color: green;
     font-family: "Courier New";
     font-size: 40px;
-}
+}	
     header, footer
-{
+h2 {color:blue;
+	}{
     padding: 1em;
 
 	color: white;
@@ -61,7 +62,7 @@ article {
 </style>
 </head>
 <body>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- index -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -70,7 +71,7 @@ article {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	</script></center>
 <div class="container">
 	
 <header>
