--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ nav ul
     list-style-type: none;
     padding: 0;
 }
-   
+container{align-content:center;}
 nav ul a
 {
     text-decoration: none;
@@ -62,7 +62,7 @@ article {
 </style>
 </head>
 <body>
-<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- index -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -71,7 +71,7 @@ article {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-	</script></center>
+	</script>
 <div class="container">
 	
 <header>
