--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1
 {
     padding: 1em;
 
-	color: white;
+	color: black;
     background-color: lightgrey;
     clear: left;
     text-align: center;
